Repaint correct geometry in StartupFeedback

Caches the current geometry of the icon and triggers repaints
only for this geometry instead of an incorrect one.
BUG: 260727

svn path=/trunk/KDE/kdebase/workspace/; revision=1208097